fix Bug(overflow) / change size contact

--- a/css/style.css
+++ b/css/style.css
@@ -46,11 +46,15 @@ body {
 
 /* IMAGE SETTING */
 .home__img div {
+  /* overflow */
+  overflow: hidden;
   display: inline-block;
+  /* Size */
   width: 100%;
   height: 1000px;
 }
 
+/* Home Images Slider */
 .home__img div:nth-of-type(1) {
   background: url("../images/HSIBG.jpg") no-repeat center/cover;
 }
@@ -563,21 +567,23 @@ a {
 _____________________________________________________________ */
 @media screen and (max-width: 1519px) {
   .contact__main {
-    margin-top: 50px;
+    margin-top: 10px;
     justify-content: center;
-  }
-  .contact__info {
-    gap: 10px;
   }
 }
 
 /* 1359px max */
-@media screen and (max-width: 1379px) {
+@media screen and (max-width: 1502px) {
   /* Contact Us */
+  #contact {
+    height: 1500px;
+  }
+
   .contact__main {
-    display: flex;
-    justify-content: center;
-    margin-top: 46px;
+    margin-top: -100px;
+  }
+  .contact__info {
+    gap: 10px;
   }
 }
 
@@ -725,11 +731,8 @@ _____________________________________________________________ */
   }
 }
 
-@media screen and (max-width: 411px) {
+@media screen and (max-width: 410px) {
   #home {
-    height: 850px;
-  }
-  .home__img {
-    height: 850px;
+    height: 950px;
   }
 }
